cmake_minimum_required(VERSION 3.14)
project(c_data_structure)

set(CMAKE_CXX_STANDARD 14)

include_directories(big_int)
include_directories(binary_tree)
include_directories(double_circular_linked_list)
include_directories(double_linked_list)
include_directories(double_linked_list_queue)
include_directories(double_linked_list_stack)
include_directories(g_list)
include_directories(linear_list)
include_directories(linear_list_stack)
include_directories(matrix)
include_directories(polynomial)
include_directories(single_circular_linked_list)
include_directories(single_circular_linked_list_queue)
include_directories(single_linked_list)
include_directories(single_linked_list_queue)
include_directories(string)

add_executable(c_data_structure
        big_int/big_int.c
        big_int/big_int.h
        binary_tree/binary_tree.c
        binary_tree/binary_tree.h
        binary_tree/dll_queue.c
        binary_tree/dll_queue.h
        binary_tree/dll_stack.c
        binary_tree/dll_stack.h
        binary_tree/elem_type_define.h
        double_circular_linked_list/double_circular_linked_list.c
        double_circular_linked_list/double_circular_linked_list.h
        double_circular_linked_list/test_double_circular_linked_list.c
        double_linked_list/double_linked_list.c
        double_linked_list/double_linked_list.h
        double_linked_list/test_double_linked_list.c
        double_linked_list_queue/double_linked_list_queue.c
        double_linked_list_queue/double_linked_list_queue.h
        double_linked_list_queue/test_double_linked_list_queue.c
        double_linked_list_stack/double_linked_list_stack.c
        double_linked_list_stack/double_linked_list_stack.h
        double_linked_list_stack/test_double_linked_list_stack.c
        g_list/g_list.c
        g_list/g_list.h
        g_list/my_string.c
        g_list/my_string.h
        g_list/my_string_array.c
        g_list/my_string_array.h
        g_list/test_g_list.c
        linear_list/linear_list.c
        linear_list/linear_list.h
        linear_list/test_linear_list.c
        linear_list_stack/bracket_matching.c
        linear_list_stack/evaluate_expression.c
        linear_list_stack/labyrinth_analyze.c
        linear_list_stack/line_edit.c
        linear_list_stack/linear_list_stack.c
        linear_list_stack/linear_list_stack.h
        linear_list_stack/number_conversion.c
        linear_list_stack/test_linear_list_stack.c
        linear_list_stack/tower_of_hanoi.c
        matrix/matrix.c
        matrix/matrix.h
        matrix/test_matrix.c
        polynomial/polynomial.c
        polynomial/polynomial.h
        polynomial/test_polynomial.c
        single_circular_linked_list/single_circular_linked_list.c
        single_circular_linked_list/single_circular_linked_list.h
        single_circular_linked_list/test_single_circular_linked_list.c
        single_circular_linked_list_queue/single_circular_linked_list_queue.c
        single_circular_linked_list_queue/single_circular_linked_list_queue.h
        single_circular_linked_list_queue/test_single_circular_linked_list_queue.c
        single_linked_list/cmake-build-debug/cmake_install.cmake
        single_linked_list/cmake-build-debug/CMakeCache.txt
        single_linked_list/cmake-build-debug/Makefile
        single_linked_list/cmake-build-debug/SingleLinkedList.cbp
        single_linked_list/CMakeLists.txt
        single_linked_list/single_linked_list.c
        single_linked_list/single_linked_list.h
        single_linked_list/test_single_linked_list.c
        single_linked_list_queue/single_linked_list_queue.c
        single_linked_list_queue/single_linked_list_queue.h
        single_linked_list_queue/test_single_linked_list_queue.c
        string/string.c
        string/string.h
        string/string_array.c
        string/string_array.h
        string/test_string.c
        string/test_string_array.c)
